parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__identifiers-0.snap
---
source: parser/src/lexer/lexer.rs
description: a
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a",
        ),
        start: 0,
        end: 1,
    },
]
