parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__indentation-0.snap
---
source: parser/src/lexer/lexer.rs
description: "if True:\n            pass\n"
---
[
    Token {
        kind: If,
        value: None,
        start: 0,
        end: 2,
    },
    Token {
        kind: True,
        value: None,
        start: 3,
        end: 7,
    },
    Token {
        kind: Colon,
        value: None,
        start: 7,
        end: 8,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 8,
        end: 9,
    },
    Token {
        kind: Indent,
        value: Indent(
            1,
        ),
        start: 9,
        end: 21,
    },
    Token {
        kind: Pass,
        value: None,
        start: 21,
        end: 25,
    },
    Token {
        kind: NewLine,
        value: None,
        start: 25,
        end: 26,
    },
    Token {
        kind: Dedent,
        value: Indent(
            1,
        ),
        start: 26,
        end: 26,
    },
]
