parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__keywords-3.snap
---
source: parser/src/lexer/lexer.rs
description: nonlocal not or pass raise return try while with yield
---
[
    Token {
        kind: Nonlocal,
        value: None,
        start: 0,
        end: 8,
    },
    Token {
        kind: Not,
        value: None,
        start: 9,
        end: 12,
    },
    Token {
        kind: Or,
        value: None,
        start: 13,
        end: 15,
    },
    Token {
        kind: Pass,
        value: None,
        start: 16,
        end: 20,
    },
    Token {
        kind: Raise,
        value: None,
        start: 21,
        end: 26,
    },
    Token {
        kind: Return,
        value: None,
        start: 27,
        end: 33,
    },
    Token {
        kind: Try,
        value: None,
        start: 34,
        end: 37,
    },
    Token {
        kind: While,
        value: None,
        start: 38,
        end: 43,
    },
    Token {
        kind: With,
        value: None,
        start: 44,
        end: 48,
    },
    Token {
        kind: Yield,
        value: None,
        start: 49,
        end: 54,
    },
]
